k8s/manifests/service/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-svc
spec:
  selector:
    app: crud-service
  ports:
  - port: 80
    targetPort: 8000
